# nova-core

.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: companion.apk
app/src/main/cpp/: CMakeLists.txt  companion_decrypt.cpp
app/src/main/java/com/cristal/bristral/tristal/mistral/: InstallActivity.kt  InstallReceiver.kt  LauncherApplication.kt  MainActivity.kt  SecondActivity.kt
app/src/main/java/com/cristal/bristral/tristal/mistral/model/: AppInfo.kt
app/src/main/java/com/cristal/bristral/tristal/mistral/service/: LauncherService.kt
app/src/main/java/com/cristal/bristral/tristal/mistral/utils/: AppLoader.kt  AppPreferences.kt
app/src/main/res/anim/: fade_in.xml  fade_out.xml  slide_down.xml  slide_up.xml
app/src/main/res/drawable/: bg_app_item.xml  bg_chip.xml  bg_dock.xml  bg_fab.xml  bg_icon_button.xml  bg_navigation_drawer.xml  bg_search_bar.xml  bg_settings_item.xml  ic_add.xml  ic_apps.xml  ic_arrow_back.xml  ic_arrow_down.xml  ic_home.xml  ic_menu.xml  ic_search.xml  ic_settings.xml  ic_widgets.xml
app/src/main/res/layout/: activity_app_detail.xml  activity_app_drawer.xml  activity_install.xml  activity_main.xml  activity_settings.xml  item_app.xml
app/src/main/res/menu/: nav_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: file_provider_paths.xml
tools/: encrypt_companion.py
